typo 'accompte' >  'acompte'

--- a/snippets/framework--product--form.liquid
+++ b/snippets/framework--product--form.liquid
@@ -81,7 +81,7 @@
            >>
           {% endcomment %}
           <div class="product-form--price" data-item="accent-text">
-            Accompte en ligne (20%): {{ current_variant.price | times: 0.2 | money }}
+            Acompte en ligne (20%): {{ current_variant.price | times: 0.2 | money }}
           </div>  
 
           <div>
