change wa contact color

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -109,7 +109,7 @@
       .whatsapp-floating-button a {
         display: flex;
         align-items: center;
-        background-color: #25D366;
+        background-color:rgb(158, 235, 151);
         color: white;
         padding: 12px 20px;
         border-radius: 50px;
