--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,7 +1,9 @@
 <!doctype html>
 <html class="no-js" lang="{{ shop.locale }}">
   <head>
+{% comment %} custom-add GSC {% endcomment %}
  <meta name="google-site-verification" content="zEppJNkwl3HsmTCwtD0lMS3maOCzc8xHkF72olaPjXI" />
+ {% comment %}  {% endcomment %}
   {% include 'shop-sheriff-amp' %}
 
     <!-- Emerge Theme - Version 3.8.0 by Troop Themes - https://troopthemes.com/ -->
